--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,24 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage"]
+  "content_scripts": [
+    {
+      "matches": ["https://*.lichess.org/*"],
+      "js": ["flip-knights.js"]
+    }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+      }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "permissions": ["storage", "activeTab", "scripting"]
 }
