--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Flip Lichess Knights",
   "description": "Flip the direction of the knights on lichess.org",
-  "version": "1.0",
+  "version": "0.0.0.1",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
@@ -25,5 +25,5 @@
     "48": "icon48.png",
     "128": "icon128.png"
   },
-  "permissions": ["storage", "activeTab", "scripting"]
+  "permissions": ["storage"]
 }
